feature: update style

--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -29,6 +29,7 @@
         <file>icon/download/pause.svg</file>
         <file>icon/download/folder.svg</file>
         <file>icon/download/details.svg</file>
+        <file>icon/download/restart.svg</file>
         <file>icon/setting/arrow-down.svg</file>
         <file>icon/setting/arrow-down-disable.svg</file>
         <file>icon/setting/arrow-up.svg</file>
