--- a/sVanilla/src/ClientUi/VideoList/VideoDetailWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoDetailWidget.ui
@@ -125,7 +125,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="Vanilla::IconButton" name="DetailPanelCloseBtn">
+       <widget class="QPushButton" name="DetailPanelCloseBtn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
           <horstretch>0</horstretch>
@@ -134,6 +134,13 @@
         </property>
         <property name="text">
          <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../resource/sVanilla.qrc">
+          <normaloff>:/icon/video/close.svg</normaloff>:/icon/video/close.svg</iconset>
+        </property>
+        <property name="_vanillaStyle_Patch" stdset="0">
+         <string>CleanButtonPatch</string>
         </property>
        </widget>
       </item>
@@ -163,13 +170,8 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>Vanilla::IconButton</class>
-   <extends>QPushButton</extends>
-   <header>VanillaStyle/Widgets/IconButton.h</header>
-  </customwidget>
- </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../../resource/sVanilla.qrc"/>
+ </resources>
  <connections/>
 </ui>
