--- a/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
@@ -18,16 +18,16 @@
   </property>
   <layout class="QVBoxLayout" name="outsideLayout">
    <property name="leftMargin">
-    <number>5</number>
+    <number>10</number>
    </property>
    <property name="topMargin">
-    <number>5</number>
+    <number>10</number>
    </property>
    <property name="rightMargin">
-    <number>5</number>
+    <number>10</number>
    </property>
    <property name="bottomMargin">
-    <number>5</number>
+    <number>10</number>
    </property>
    <item>
     <widget class="QWidget" name="titleWidget" native="true">
@@ -72,9 +72,16 @@
        </widget>
       </item>
       <item>
-       <widget class="Vanilla::IconButton" name="btnDelete">
+       <widget class="QPushButton" name="btnDelete">
         <property name="text">
          <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../resource/sVanilla.qrc">
+          <normaloff>:/icon/download/delete.svg</normaloff>:/icon/download/delete.svg</iconset>
+        </property>
+        <property name="_vanillaStyle_Patch" stdset="0">
+         <string>CleanButtonPatch</string>
         </property>
        </widget>
       </item>
@@ -151,17 +158,24 @@
        </spacer>
       </item>
       <item>
-       <widget class="Vanilla::IconButton" name="btnPause">
+       <widget class="QPushButton" name="btnPause">
         <property name="text">
          <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../resource/sVanilla.qrc">
+          <normaloff>:/icon/download/pause.svg</normaloff>:/icon/download/pause.svg</iconset>
         </property>
         <property name="checkable">
          <bool>true</bool>
         </property>
+        <property name="_vanillaStyle_Patch" stdset="0">
+         <string>CleanButtonPatch</string>
+        </property>
        </widget>
       </item>
       <item>
-       <widget class="Vanilla::IconButton" name="btnFolder">
+       <widget class="QPushButton" name="btnFolder">
         <property name="minimumSize">
          <size>
           <width>32</width>
@@ -177,10 +191,17 @@
         <property name="text">
          <string/>
         </property>
+        <property name="icon">
+         <iconset resource="../../../resource/sVanilla.qrc">
+          <normaloff>:/icon/download/folder.svg</normaloff>:/icon/download/folder.svg</iconset>
+        </property>
+        <property name="_vanillaStyle_Patch" stdset="0">
+         <string>CleanButtonPatch</string>
+        </property>
        </widget>
       </item>
       <item>
-       <widget class="Vanilla::IconButton" name="btnDetail">
+       <widget class="QPushButton" name="btnDetail">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -190,6 +211,13 @@
         <property name="text">
          <string/>
         </property>
+        <property name="icon">
+         <iconset resource="../../../resource/sVanilla.qrc">
+          <normaloff>:/icon/download/details.svg</normaloff>:/icon/download/details.svg</iconset>
+        </property>
+        <property name="_vanillaStyle_Patch" stdset="0">
+         <string>CleanButtonPatch</string>
+        </property>
        </widget>
       </item>
      </layout>
@@ -198,13 +226,8 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>Vanilla::IconButton</class>
-   <extends>QPushButton</extends>
-   <header>VanillaStyle/Widgets/IconButton.h</header>
-  </customwidget>
- </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../../resource/sVanilla.qrc"/>
+ </resources>
  <connections/>
 </ui>
