--- a/sVanilla/src/ClientUi/Download/DownloadWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadWidget.ui
@@ -1,174 +1,177 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DownloadWidget</class>
- <widget class="QWidget" name="DownloadWidget">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>515</width>
-    <height>604</height>
-   </rect>
-  </property>
-  <property name="windowTitle">
-   <string>DownloadWidget</string>
-  </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="leftMargin">
-    <number>10</number>
-   </property>
-   <property name="topMargin">
-    <number>10</number>
-   </property>
-   <item>
-    <widget class="QWidget" name="NavigationWidget" native="true">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>30</height>
-      </size>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
-      <property name="leftMargin">
-       <number>10</number>
-      </property>
-      <property name="topMargin">
-       <number>10</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="Vanilla::ToggleButton" name="horizonNavigation" native="true">
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>0</height>
-         </size>
-        </property>
+       <class>DownloadWidget</class>
+       <widget class="QWidget" name="DownloadWidget">
+              <property name="geometry">
+                     <rect>
+                            <x>0</x>
+                            <y>0</y>
+                            <width>515</width>
+                            <height>604</height>
+                     </rect>
+              </property>
+              <property name="windowTitle">
+                     <string>DownloadWidget</string>
+              </property>
+              <layout class="QVBoxLayout" name="verticalLayout">
+                     <property name="leftMargin">
+                            <number>10</number>
+                     </property>
+                     <property name="topMargin">
+                            <number>10</number>
+                     </property>
+                     <item>
+                            <widget class="QWidget" name="NavigationWidget" native="true">
+                                   <property name="minimumSize">
+                                          <size>
+                                                 <width>0</width>
+                                                 <height>30</height>
+                                          </size>
+                                   </property>
+                                   <layout class="QHBoxLayout" name="horizontalLayout_4">
+                                          <property name="leftMargin">
+                                                 <number>10</number>
+                                          </property>
+                                          <property name="topMargin">
+                                                 <number>10</number>
+                                          </property>
+                                          <property name="rightMargin">
+                                                 <number>0</number>
+                                          </property>
+                                          <property name="bottomMargin">
+                                                 <number>0</number>
+                                          </property>
+                                          <item>
+                                                 <widget class="Vanilla::ToggleButton" name="horizonNavigation" native="true">
+                                                        <property name="minimumSize">
+                                                               <size>
+                                                                      <width>0</width>
+                                                                      <height>0</height>
+                                                               </size>
+                                                        </property>
+                                                 </widget>
+                                          </item>
+                                          <item>
+                                                 <spacer name="horizontalSpacer">
+                                                        <property name="orientation">
+                                                               <enum>Qt::Horizontal</enum>
+                                                        </property>
+                                                        <property name="sizeHint" stdset="0">
+                                                               <size>
+                                                                      <width>538</width>
+                                                                      <height>17</height>
+                                                               </size>
+                                                        </property>
+                                                 </spacer>
+                                          </item>
+                                   </layout>
+                            </widget>
+                     </item>
+                     <item>
+                            <widget class="QStackedWidget" name="stackedWidget">
+                                   <property name="currentIndex">
+                                          <number>0</number>
+                                   </property>
+                                   <widget class="QWidget" name="widgetDownloading">
+                                          <layout class="QVBoxLayout" name="gridLayout">
+                                                 <item>
+                                                        <widget class="QSplitter" name="splitter">
+                                                               <property name="orientation">
+                                                                      <enum>Qt::Vertical</enum>
+                                                               </property>
+                                                               <widget class="::DownloadingListWidget" name="DownloadListWidget"/>
+                                                               <widget class="QWidget" name="DownloadingInfoWidget" native="true"/>
+                                                        </widget>
+                                                 </item>
+                                                 <item>
+                                                        <widget class="QWidget" name="DownloadPageBtnGroup" native="true">
+                                                               <layout class="QHBoxLayout" name="horizontalLayout">
+                                                                      <item>
+                                                                             <widget class="QPushButton" name="btnStopAll">
+                                                                                    <property name="text">
+                                                                                           <string>Stop All</string>
+                                                                                    </property>
+                                                                             </widget>
+                                                                      </item>
+                                                                      <item>
+                                                                             <widget class="QPushButton" name="btnStartAll">
+                                                                                    <property name="text">
+                                                                                           <string>Start All</string>
+                                                                                    </property>
+                                                                             </widget>
+                                                                      </item>
+                                                                      <item>
+                                                                             <widget class="QPushButton" name="btnDeleteAll">
+                                                                                    <property name="text">
+                                                                                           <string>Delete All</string>
+                                                                                    </property>
+                                                                             </widget>
+                                                                      </item>
+                                                               </layout>
+                                                        </widget>
+                                                 </item>
+                                          </layout>
+                                   </widget>
+                                   <widget class="QWidget" name="widgetDownloaded">
+                                          <layout class="QGridLayout" name="gridLayout_3">
+                                                 <item row="2" column="0">
+                                                        <widget class="QWidget" name="DownloadedBtnGroup" native="true">
+                                                               <layout class="QHBoxLayout" name="horizontalLayout_2">
+                                                                      <item>
+                                                                             <widget class="QPushButton" name="btnClearAll">
+                                                                                    <property name="text">
+                                                                                           <string>Clear All</string>
+                                                                                    </property>
+                                                                             </widget>
+                                                                      </item>
+                                                                      <item>
+                                                                             <widget class="QPushButton" name="btnRedownload">
+                                                                                    <property name="text">
+                                                                                           <string>Reloaded All</string>
+                                                                                    </property>
+                                                                             </widget>
+                                                                      </item>
+                                                                      <item>
+                                                                             <widget class="QPushButton" name="btnScaned">
+                                                                                    <property name="text">
+                                                                                           <string>Scan</string>
+                                                                                    </property>
+                                                                             </widget>
+                                                                      </item>
+                                                               </layout>
+                                                        </widget>
+                                                 </item>
+                                                 <item row="0" column="0">
+                                                        <widget class="DownloadedListWidget" name="listWidgetDownloaded"/>
+                                                 </item>
+                                                 <item row="1" column="0">
+                                                        <widget class="QWidget" name="DownloadedInfoWidget" native="true"/>
+                                                 </item>
+                                          </layout>
+                                   </widget>
+                            </widget>
+                     </item>
+              </layout>
        </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>538</width>
-          <height>17</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QStackedWidget" name="stackedWidget">
-     <property name="currentIndex">
-      <number>1</number>
-     </property>
-     <widget class="QWidget" name="widgetDownloading">
-      <layout class="QVBoxLayout" name="gridLayout">
-       <item>
-        <widget class="QSplitter" name="splitter">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <widget class="::DownloadingListWidget" name="DownloadListWidget"/>
-         <widget class="QWidget" name="DownloadInfoamationWidget" native="true"/>
-        </widget>
-       </item>
-       <item>
-        <widget class="QWidget" name="DownloadPageBtnGroup" native="true">
-         <layout class="QHBoxLayout" name="horizontalLayout">
-          <item>
-           <widget class="QPushButton" name="btnStopAll">
-            <property name="text">
-             <string>Stop All</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="btnStartAll">
-            <property name="text">
-             <string>Start All</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="btnDeleteAll">
-            <property name="text">
-             <string>Delete All</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="widgetDownloaded">
-      <layout class="QGridLayout" name="gridLayout_3">
-       <item row="0" column="0">
-        <widget class="DownloadedListWidget" name="listWidgetDownloaded"/>
-       </item>
-       <item row="1" column="0">
-        <widget class="QWidget" name="DownloadedBtnGroup" native="true">
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
-           <widget class="QPushButton" name="btnClearAll">
-            <property name="text">
-             <string>Clear All</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="btnRedownload">
-            <property name="text">
-             <string>Reloaded All</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="btnScaned">
-            <property name="text">
-             <string>Scan</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </widget>
-   </item>
-  </layout>
- </widget>
- <customwidgets>
-  <customwidget>
-   <class>Vanilla::ToggleButton</class>
-   <extends>QWidget</extends>
-   <header>VanillaStyle/Widgets/ToggleButton.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>::DownloadingListWidget</class>
-   <extends>QListWidget</extends>
-   <header>ClientUi/Download/DownloadingListWidget.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>DownloadedListWidget</class>
-   <extends>QListWidget</extends>
-   <header>ClientUi/Download/DownloadedListWidget.h</header>
-  </customwidget>
- </customwidgets>
- <resources/>
- <connections/>
+       <customwidgets>
+              <customwidget>
+                     <class>Vanilla::ToggleButton</class>
+                     <extends>QWidget</extends>
+                     <header>VanillaStyle/Widgets/ToggleButton.h</header>
+                     <container>1</container>
+              </customwidget>
+              <customwidget>
+                     <class>::DownloadingListWidget</class>
+                     <extends>QListWidget</extends>
+                     <header>ClientUi/Download/DownloadingListWidget.h</header>
+                     <container>1</container>
+              </customwidget>
+              <customwidget>
+                     <class>DownloadedListWidget</class>
+                     <extends>QListWidget</extends>
+                     <header>ClientUi/Download/DownloadedListWidget.h</header>
+              </customwidget>
+       </customwidgets>
+       <resources/>
+       <connections/>
 </ui>
