fix(ui): fix system btn

--- a/sVanilla/src/ClientUi/MainWindow/WindowBar.ui
+++ b/sVanilla/src/ClientUi/MainWindow/WindowBar.ui
@@ -29,7 +29,7 @@
    <item>
     <spacer name="horizontalSpacer">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -75,7 +75,7 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
+     <layout class="QHBoxLayout" name="systemBtnLayout">
       <property name="leftMargin">
        <number>0</number>
       </property>
