--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -30,6 +30,7 @@
         <file>icon/download/folder.svg</file>
         <file>icon/download/details.svg</file>
         <file>icon/download/restart.svg</file>
+        <file>icon/download/downloading.svg</file>
         <file>icon/setting/arrow-down.svg</file>
         <file>icon/setting/arrow-down-disable.svg</file>
         <file>icon/setting/arrow-up.svg</file>
