--- a/sVanilla/src/ClientUi/Download/DownloadedInfoWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadedInfoWidget.ui
@@ -15,14 +15,14 @@
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="3" column="0">
-    <widget class="QLabel" name="filePathLabel">
+    <widget class="QLabel" name="labelFilePathIdentifier">
      <property name="text">
       <string>FilePath:</string>
      </property>
     </widget>
    </item>
    <item row="0" column="3">
-    <widget class="QPushButton" name="closeButton">
+    <widget class="QPushButton" name="btnClose">
      <property name="icon">
       <iconset theme=":/icon/video/close.svg"/>
      </property>
@@ -32,14 +32,14 @@
     </widget>
    </item>
    <item row="5" column="0">
-    <widget class="QLabel" name="totalSizeLabel">
+    <widget class="QLabel" name="labelTotalSizeIdentifier">
      <property name="text">
       <string>TotalSize:</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QLabel" name="statusLabel">
+    <widget class="QLabel" name="labelStatusIdentifier">
      <property name="text">
       <string>Status:</string>
      </property>
@@ -59,14 +59,14 @@
     </spacer>
    </item>
    <item row="4" column="0">
-    <widget class="QLabel" name="speedLabel">
+    <widget class="QLabel" name="labelSpeedIdentifier">
      <property name="text">
       <string>DownloadingSpeed:</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QPushButton" name="statusIcon">
+    <widget class="QPushButton" name="btnStatus">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
        <horstretch>0</horstretch>
@@ -88,21 +88,21 @@
     </widget>
    </item>
    <item row="3" column="1" colspan="3">
-    <widget class="QLabel" name="filePath">
+    <widget class="QLabel" name="labelFilePath">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
    <item row="4" column="1" colspan="3">
-    <widget class="QLabel" name="speed">
+    <widget class="QLabel" name="labelSpeed">
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
    <item row="5" column="1" colspan="3">
-    <widget class="QLabel" name="totalSize">
+    <widget class="QLabel" name="labelTotalSize">
      <property name="text">
       <string/>
      </property>
