--- a/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
@@ -1,218 +1,221 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DownloadingItemWidget</class>
- <widget class="QWidget" name="DownloadingItemWidget">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>374</width>
-    <height>146</height>
-   </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
-  <layout class="QVBoxLayout" name="outsideLayout">
-   <property name="leftMargin">
-    <number>10</number>
-   </property>
-   <property name="topMargin">
-    <number>10</number>
-   </property>
-   <property name="rightMargin">
-    <number>10</number>
-   </property>
-   <property name="bottomMargin">
-    <number>10</number>
-   </property>
-   <item>
-    <widget class="QWidget" name="titleWidget" native="true">
-     <layout class="QHBoxLayout" name="titleLayout">
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="QLabel" name="labelTitle">
-        <property name="text">
-         <string>-</string>
-        </property>
-        <property name="_vanillaStyle_Patch" stdset="0">
-         <string>QLabelPatch</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="Spacer">
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>0</width>
-          <height>0</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLabel" name="labelStatus">
-        <property name="text">
-         <string>Waitting</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="btnDelete">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../resource/sVanilla.qrc">
-          <normaloff>:/icon/download/delete.svg</normaloff>:/icon/download/delete.svg</iconset>
-        </property>
-        <property name="_vanillaStyle_Patch" stdset="0">
-         <string>CleanButtonPatch</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QProgressBar" name="progressBar">
-     <property name="sizePolicy">
+  <class>DownloadingItemWidget</class>
+  <widget class="QWidget" name="DownloadingItemWidget">
+    <property name="geometry">
+      <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>374</width>
+        <height>146</height>
+      </rect>
+    </property>
+    <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
       </sizepolicy>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QWidget" name="btnWidget" native="true">
-     <layout class="QHBoxLayout" name="btnLayout">
+    </property>
+    <layout class="QVBoxLayout" name="outsideLayout">
       <property name="leftMargin">
-       <number>0</number>
+        <number>10</number>
       </property>
       <property name="topMargin">
-       <number>0</number>
+        <number>10</number>
       </property>
       <property name="rightMargin">
-       <number>0</number>
+        <number>10</number>
       </property>
       <property name="bottomMargin">
-       <number>0</number>
+        <number>10</number>
       </property>
       <item>
-       <widget class="QLabel" name="labelSize">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+        <widget class="QWidget" name="titleWidget" native="true">
+          <layout class="QHBoxLayout" name="titleLayout">
+            <property name="leftMargin">
+              <number>0</number>
+            </property>
+            <property name="topMargin">
+              <number>0</number>
+            </property>
+            <property name="rightMargin">
+              <number>0</number>
+            </property>
+            <property name="bottomMargin">
+              <number>0</number>
+            </property>
+            <item>
+              <widget class="QLabel" name="labelTitle">
+                <property name="text">
+                  <string>-</string>
+                </property>
+                <property name="_vanillaStyle_Patch" stdset="0">
+                  <string>QLabelPatch</string>
+                </property>
+              </widget>
+            </item>
+            <item>
+              <spacer name="Spacer">
+                <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                  <size>
+                    <width>0</width>
+                    <height>0</height>
+                  </size>
+                </property>
+              </spacer>
+            </item>
+            <item>
+              <widget class="QLabel" name="labelStatus">
+                <property name="text">
+                  <string>Waitting</string>
+                </property>
+              </widget>
+            </item>
+            <item>
+              <widget class="QPushButton" name="btnDelete">
+                <property name="text">
+                  <string />
+                </property>
+                <property name="icon">
+                  <iconset>
+                    <normaloff>:/icon/download/delete.svg</normaloff>:/icon/download/delete.svg</iconset>
+                </property>
+                <property name="_vanillaStyle_Patch" stdset="0">
+                  <string>CleanButtonPatch</string>
+                </property>
+              </widget>
+            </item>
+          </layout>
+        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="labelRemainingTime">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+        <widget class="QProgressBar" name="progressBar">
+          <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+            </sizepolicy>
+          </property>
+          <property name="value">
+            <number>0</number>
+          </property>
+        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="labelSpeed">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+        <widget class="QWidget" name="btnWidget" native="true">
+          <layout class="QHBoxLayout" name="btnLayout">
+            <property name="leftMargin">
+              <number>0</number>
+            </property>
+            <property name="topMargin">
+              <number>0</number>
+            </property>
+            <property name="rightMargin">
+              <number>0</number>
+            </property>
+            <property name="bottomMargin">
+              <number>0</number>
+            </property>
+            <item>
+              <widget class="QLabel" name="labelSize">
+                <property name="text">
+                  <string />
+                </property>
+              </widget>
+            </item>
+            <item>
+              <widget class="QLabel" name="labelRemainingTime">
+                <property name="text">
+                  <string />
+                </property>
+              </widget>
+            </item>
+            <item>
+              <widget class="QLabel" name="labelSpeed">
+                <property name="text">
+                  <string />
+                </property>
+              </widget>
+            </item>
+            <item>
+              <widget class="QLabel" name="labelDuration">
+                <property name="text">
+                  <string />
+                </property>
+              </widget>
+            </item>
+            <item>
+              <spacer name="horizontalSpacer">
+                <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                  <size>
+                    <width>0</width>
+                    <height>0</height>
+                  </size>
+                </property>
+              </spacer>
+            </item>
+            <item>
+              <widget class="QPushButton" name="btnPause">
+                <property name="text">
+                  <string />
+                </property>
+                <property name="icon">
+                  <iconset>
+                    <normaloff>:/icon/download/pause.svg</normaloff>:/icon/download/pause.svg</iconset>
+                </property>
+                <property name="checkable">
+                  <bool>true</bool>
+                </property>
+                <property name="_vanillaStyle_Patch" stdset="0">
+                  <string>CleanButtonPatch</string>
+                </property>
+              </widget>
+            </item>
+            <item>
+              <widget class="QPushButton" name="btnFolder">
+                <property name="text">
+                  <string />
+                </property>
+                <property name="icon">
+                  <iconset>
+                    <normaloff>:/icon/download/folder.svg</normaloff>:/icon/download/folder.svg</iconset>
+                </property>
+                <property name="_vanillaStyle_Patch" stdset="0">
+                  <string>CleanButtonPatch</string>
+                </property>
+              </widget>
+            </item>
+            <item>
+              <widget class="QPushButton" name="btnDetail">
+                <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                  </sizepolicy>
+                </property>
+                <property name="text">
+                  <string />
+                </property>
+                <property name="icon">
+                  <iconset>
+                    <normaloff>:/icon/download/details.svg</normaloff>:/icon/download/details.svg</iconset>
+                </property>
+                <property name="_vanillaStyle_Patch" stdset="0">
+                  <string>CleanButtonPatch</string>
+                </property>
+              </widget>
+            </item>
+          </layout>
+        </widget>
       </item>
-      <item>
-       <widget class="QLabel" name="labelDuration">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>0</width>
-          <height>0</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="btnPause">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../resource/sVanilla.qrc">
-          <normaloff>:/icon/download/pause.svg</normaloff>:/icon/download/pause.svg</iconset>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="_vanillaStyle_Patch" stdset="0">
-         <string>CleanButtonPatch</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="btnFolder">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../resource/sVanilla.qrc">
-          <normaloff>:/icon/download/folder.svg</normaloff>:/icon/download/folder.svg</iconset>
-        </property>
-        <property name="_vanillaStyle_Patch" stdset="0">
-         <string>CleanButtonPatch</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="btnDetail">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../resource/sVanilla.qrc">
-          <normaloff>:/icon/download/details.svg</normaloff>:/icon/download/details.svg</iconset>
-        </property>
-        <property name="_vanillaStyle_Patch" stdset="0">
-         <string>CleanButtonPatch</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-  </layout>
- </widget>
- <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="../../../resource/sVanilla.qrc"/>
- </resources>
- <connections/>
+    </layout>
+  </widget>
+  <layoutdefault spacing="6" margin="11" />
+  <connections />
 </ui>
